--- a/static/mashuphope.html
+++ b/static/mashuphope.html
@@ -30,7 +30,7 @@
     <p id="gotword2"></p>
 
     <input type="text" name="friend's city" id="friendcity"><br>
-    <button onclick="initMap.GeoCode()">Add Friend's Location</button>
+    <button onclick="initMap.GeoCode()" id="friendcitybottom">Add Friend's Location</button>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9uFBbA6BKRjP6Mnc8DF5j5S0uEmmKkoI&callback=initMap">
     </script>
